# rules_haskell

flags/: BUILD.bazel
